# micro-spl-gov

./: .gitignore  Anchor.toml  BUILD.md  INFO.md  OPS.md  README.md  package.json
docs/: BETA_FEATURES.md  PRIVACY_LAYER_SPEC.md
programs/mpl-gov-micro/: Cargo.toml
programs/mpl-gov-micro/src/: errors.rs  lib.rs
programs/mpl-gov-micro/src/instructions/: cast_vote.rs  create_election.rs
programs/mpl-gov-micro/src/state/: election.rs  voter.rs
programs/mpl-gov-micro/src/utils/: compression.rs  merkle.rs  mod.rs
programs/spl-gov-micro/: Cargo.toml
programs/spl-gov-micro/src/: errors.rs  lib.rs
programs/spl-gov-micro/src/instructions/: cast_batch_votes.rs  cast_vote.rs  close_election.rs  create_election.rs  hooks.rs  mod.rs  privacy_interface.rs  register_voter.rs
programs/spl-gov-micro/src/state/: election.rs  mod.rs  vote.rs
programs/spl-gov-micro/src/utils/: compression.rs
sdk/: README.md  compression.ts  index.ts
sdk/examples/: compressed-election.ts
tests/: compression.test.ts  mpl-gov-micro.ts  spl-gov-micro.ts
