[package]
name = "mpl-gov-micro"
version = "0.1.0"
description = "Lightweight governance protocol with ZK Compression for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_gov_micro"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
borsh = "0.10.3"

# Light Protocol dependencies for zkCompression
# Will be added in production version
# light-sdk = "5.0"
# light-hasher = "5.0"
# light-verifier = "5.0"

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"
