[package]
name = "spl-gov-micro"
version = "0.1.0"
description = "Lightweight governance protocol with ZK Compression for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_gov_micro"

[features]
default = ["compression"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
compression = ["spl-account-compression", "spl-noop"]
legacy-mode = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
borsh = "0.10.3"
solana-program = "1.18"

# SPL Account Compression for zkCompression
# Using SPL Account Compression as the stable compression standard
spl-account-compression = { version = "0.3.0", features = ["cpi"], optional = true }
spl-noop = { version = "0.2.0", optional = true }

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"
